tests/fixtures/invalid/int_ge_none.py
# Cannot compare with >= Int and None
x: bool = 1 >= None
